<resources>
    <string name="app_name">Animation</string>
    <string name="rotate">Rotate</string>
    <string name="translate">Translate</string>
    <string name="scale">Scale</string>
    <string name="fade">Fade</string>
    <string name="color">Color</string>
    <string name="snowing">Snowing</string>
    <string name="start">Start</string>
    <string name="rotation">ROTATION</string>
    <string name="rotation_y">ROTATION_Y</string>
    <string name="rotation_x">ROTATION_X</string>
</resources>
