<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <Button
        android:id="@+id/btnRotate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rotate"
        android:padding="32dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnTranslate"/>

    <Button
        android:id="@+id/btnTranslate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:padding="32dp"
        app:layout_constraintTop_toBottomOf="@id/btnRotate"
        app:layout_constraintBottom_toTopOf="@id/btnScale"/>

    <Button
        android:id="@+id/btnScale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scale"
        android:padding="32dp"
        app:layout_constraintTop_toBottomOf="@id/btnTranslate"
        app:layout_constraintBottom_toTopOf="@id/btnFade"/>

    <Button
        android:id="@+id/btnFade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fade"
        android:padding="32dp"
        app:layout_constraintTop_toBottomOf="@id/btnScale"
        app:layout_constraintBottom_toTopOf="@id/btnColor"/>

    <Button
        android:id="@+id/btnColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:padding="32dp"
        app:layout_constraintTop_toBottomOf="@id/btnFade"
        app:layout_constraintBottom_toTopOf="@id/btnSnowing"/>

    <Button
        android:id="@+id/btnSnowing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snowing"
        android:padding="32dp"
        app:layout_constraintTop_toBottomOf="@id/btnColor"
        app:layout_constraintBottom_toBottomOf="parent"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>